# designgurus.io

./: .gitignore  Makefile  README.md  activate_dev.sh  pyproject.toml  requirements-dev.txt
problems/01.warmup/: a.contains.duplicate.py  b.pangram.py  c.reverse.vowels.py  d.palindrome.py  d.valid.palindrome.py  e.valid.anagram.py  f.shortest.word.distance.py  g.number.of.good.pairs.py  h.square.root.py
problems/02.two.pointers/: a.pair.with.target.sum.py  b.find.non.duplicate.number.instances.py  c.squaring.a.sorted.array.py  d.triplet.sum.to.zero.py  e.triplet.sum.close.to.target.py  f.triplets.with.smaller.sum.py  g.dutch.national.flag.problem.py
